tests/error/comprehension_errors/capture6.err
Error: Copy violation (at $FILE:13:12)
   | 
11 | def foo(xs: list[int]) -> list[MyEnum]:
12 |     e = MyEnum.Var(qubit())
13 |     return [e for _ in xs]
   |             ^ Variable `e` with non-copyable type `MyEnum` would be moved
   |               multiple times when evaluating this comprehension

Guppy compilation failed due to 1 previous error
